Bug 89928 - FILEOPEN: image color in PPTX file is black instead of white
Summary: FILEOPEN: image color in PPTX file is black instead of white
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Sarper Akdemir
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords:
: 105380 (view as bug list)
Depends on:
Blocks: Impress-Images PPTX-Images
  Show dependency treegraph
 
Reported: 2015-03-10 11:32 UTC by Andrei Cristian Petcu
Modified: 2023-01-24 12:45 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Image color is wrong (3.12 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-03-10 11:32 UTC, Andrei Cristian Petcu
Details
Image color displayed in Microsoft Office (83.94 KB, image/png)
2015-03-10 11:34 UTC, Andrei Cristian Petcu
Details
Image color displayed in Libre Office (102.46 KB, image/png)
2015-03-10 11:34 UTC, Andrei Cristian Petcu
Details
screenshot (20.79 KB, image/png)
2015-04-09 20:09 UTC, Yousuf Philips (jay) (retired)
Details
Initially opened by LO 5.2.3.2 (62.71 KB, image/png)
2016-11-01 22:37 UTC, Viruch Hemapanpairo
Details
after adjusting the brightness of the ungrouped images (102.34 KB, image/png)
2016-11-01 22:37 UTC, Viruch Hemapanpairo
Details
Screenshot with LibreOffice 6.4.4.2 (12.06 KB, image/png)
2020-06-21 21:40 UTC, Gerald Pfeifer
Details
Alternate testcase - icons appear black instead of white (201.14 KB, application/vnd.ms-powerpoint)
2022-08-25 14:26 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei Cristian Petcu 2015-03-10 11:32:48 UTC
Created attachment 114013 [details]
Image color is wrong

Some images in this file are displayed as being black in LibreOffice Impress while they appear as white in Microsoft Office.
Comment 1 Andrei Cristian Petcu 2015-03-10 11:34:16 UTC
Created attachment 114014 [details]
Image color displayed in Microsoft Office
Comment 2 Andrei Cristian Petcu 2015-03-10 11:34:44 UTC
Created attachment 114015 [details]
Image color displayed in Libre Office
Comment 3 A (Andy) 2015-03-11 21:55:34 UTC
Reproducible with LO 4.4.1.2, Win 8.1
Comment 4 Matthew Francis 2015-03-20 08:01:09 UTC
Reproduced in LibreOffice 3.3.0.4/OSX.
OOo 3.3.0 also shows it the same way, so
-> Inherited from OOo
Comment 5 Yousuf Philips (jay) (retired) 2015-04-09 20:09:27 UTC
Created attachment 114705 [details]
screenshot

So checking into the issue and both the images have a brightness and contrast preset and recolor preset added to them causing them to appear white.
Comment 6 Yousuf Philips (jay) (retired) 2015-04-09 20:21:55 UTC
Filed bug 90537 regarding the incorrect direction of the waves.
Comment 7 tommy27 2016-04-16 07:25:11 UTC Comment hidden (obsolete)
Comment 8 Viruch Hemapanpairo 2016-11-01 22:33:41 UTC
Version of LibreOffice in test:
Version: 5.2.3.2
Build ID: c019706a50de7fcb07d0d528b09b46a887562beb
CPU Threads: 4; OS Version: Linux 3.13; UI Render: default; 
Locale: en-US (en_US.UTF-8); Calc: group

1. The file was opened with the grouped image being misplaced, compare to the original screen shot.

2. parts of the images is black, and some are white as shown in the attached file

3. The color can be recorrect by ungrouping the images and correcting their brightness to 100%
Comment 9 Viruch Hemapanpairo 2016-11-01 22:37:01 UTC
Created attachment 128414 [details]
Initially opened by LO 5.2.3.2
Comment 10 Viruch Hemapanpairo 2016-11-01 22:37:43 UTC
Created attachment 128415 [details]
after adjusting the brightness of the ungrouped images
Comment 11 QA Administrators 2017-11-30 06:25:25 UTC Comment hidden (obsolete)
Comment 12 QA Administrators 2019-12-03 14:33:53 UTC Comment hidden (obsolete)
Comment 13 Gerald Pfeifer 2020-06-21 21:40:10 UTC
Created attachment 162272 [details]
Screenshot with LibreOffice 6.4.4.2

Still not matching MSO as of 

  Version: 6.4.4.2
  Build ID: 40(Build:2)
  CPU threads: 4; OS: Linux 5.6; UI render: default; VCL: gtk3; 
  Locale: en-US (en_US.UTF-8); UI-Language: en-US
  Calc: threaded

though it looks a bit different than the original LibreOffice screenshot
- close to MSO, but not there yet: still black and white lines.
Comment 14 NISZ LibreOffice Team 2021-05-10 14:07:58 UTC
*** Bug 105380 has been marked as a duplicate of this bug. ***
Comment 15 NISZ LibreOffice Team 2021-05-10 14:09:11 UTC
Code pointer in the duplicate bug:

https://bugs.documentfoundation.org//show_bug.cgi?id=105380#c11
Comment 16 Gerald Pfeifer 2022-08-25 14:18:25 UTC
Still seeing the original issue in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 46dc9f3bbac67e9240adc44ab017f905482ef786
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Comment 17 Gerald Pfeifer 2022-08-25 14:26:10 UTC
Created attachment 182023 [details]
Alternate testcase - icons appear black instead of white

I was just going to file what looks like a duplicate. The testcase I am
adding now shows the icons in the top half in black instead of white in
LibreOffice 6.4 to 7.5 alpha.

Possibly related, the icons in the lower half "lose" much of their black
color and become half invisible. Please advise if this turns out to be a
different issue and I'll file a separate report.
Comment 18 Commit Notification 2022-09-20 06:29:57 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ecc76988ec46ba0d6c5cb72ac88f65da48867b1

tdf#89928 pptx import: implement import of BiLevel threshold

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2022-09-21 09:34:34 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/613494b0d2dbde377473b42412a33f20c4b7d45c

tdf#89928 pptx import: implement import of BiLevel threshold

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Gerald Pfeifer 2022-09-25 06:53:31 UTC
Happy to verify both the original case and my alternate testcase as
resolved with

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 90861cc6f815b3f34edb88d47afed0d1099e72e7
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US