tdf#89928 pptx import: implement import of BiLevel threshold

Implement import BiLevel effect's threshold value.
If threshold isn't exactly 50%, we can't map it to the doc model.

Therefore as a workaround apply the BiLevel (Black/White) effect with
specified threshold directly to the graphic.

Change-Id: Ib24d149d74b103d926560708c68bb937b02c4cfe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140136
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>